--- a/DATA/MetaDNA/KEGG_MetaDNA/KEGG_MetaDNA.vbproj
+++ b/DATA/MetaDNA/KEGG_MetaDNA/KEGG_MetaDNA.vbproj
@@ -91,6 +91,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KEGGMetaDB.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
