add kegg reaction class data model

--- a/src/metadna/KEGG_MetaDNA/KEGG_MetaDNA.vbproj
+++ b/src/metadna/KEGG_MetaDNA/KEGG_MetaDNA.vbproj
@@ -113,6 +113,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ReactionLink.vb" />
     <Compile Include="KEGGMetaDB.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
